--- a/TigrSettings.Examples/App.config
+++ b/TigrSettings.Examples/App.config
@@ -3,7 +3,8 @@
 	<appSettings>
 		<add key="Int" value="5" />
 		<add key="String" value="foobar" />
-		<add key="Enum" value="Foo|Baz" />
+		<add key="Guid" value="9d50f0fb-4127-4433-b062-7ecf211a2adb" />
+		<add key="Enum" value="Foo|Baz" /> <!-- Note that [Flags] are supported -->
 		<add key="DateTime" value="2018-04-21T12:34:56.789Z" />
 		<add key="ArrayOfTimeSpans" value="00:00:05, 00:00:10, 00:00:15" />
 		<add key="NullableBoolean" value="null" />
