--- a/TigrSettings.Providers.EnvironmentVariables/TigrSettings.Providers.EnvironmentVariables.csproj
+++ b/TigrSettings.Providers.EnvironmentVariables/TigrSettings.Providers.EnvironmentVariables.csproj
@@ -6,12 +6,16 @@
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Authors>Sergey Konkin</Authors>
 		<Product>TigrSettings</Product>
-		<Description>Simple yet extensible .NET Standard 2.0 library for mapping settings to strong types.</Description>
+		<Description>Environment variables provider for TigrSettings.</Description>
 		<Copyright>Copyright (c) 2018 Sergey Konkin</Copyright>
 		<PackageLicenseUrl>https://raw.githubusercontent.com/sergeykonkin/TigrSettings/master/LICENSE</PackageLicenseUrl>
 		<PackageProjectUrl>https://github.com/sergeykonkin/TigrSettings</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/sergeykonkin/TigrSettings</RepositoryUrl>
 		<PackageTags>app.config web.config settings</PackageTags>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\TigrSettings\TigrSettings.csproj" />
+	</ItemGroup>
 
 </Project>
