--- a/TigrSettings.Providers.ConfigurationManager/TigrSettings.Providers.ConfigurationManager.csproj
+++ b/TigrSettings.Providers.ConfigurationManager/TigrSettings.Providers.ConfigurationManager.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<Version>1.1.0</Version>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFrameworks>netstandard2.0;net462</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Authors>Sergey Konkin</Authors>
 		<Product>TigrSettings</Product>
