--- a/TigrSettings.Examples/App.config
+++ b/TigrSettings.Examples/App.config
@@ -8,5 +8,9 @@
 		<add key="DateTime" value="2018-04-21T12:34:56.789Z" />
 		<add key="ArrayOfTimeSpans" value="00:00:05, 00:00:10, 00:00:15" />
 		<add key="NullableBoolean" value="null" />
+		<add key="Inner.InnerProp1" value="baz" />
+		<add key="Inner.InnerProp2" value="5, null, 7" />
+		<add key="Inner.Deeper.InnerProp3" value="Bar" />
+		<add key="NestedStaticClass.NestedStaticProp" value="nested static prop value" />
 	</appSettings>
 </configuration>
