--- a/TigrSettings.Examples/TigrSettings.Examples.csproj
+++ b/TigrSettings.Examples/TigrSettings.Examples.csproj
@@ -1,14 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<OutputType>Exe</OutputType>		<TargetFramework>net462</TargetFramework>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net462</TargetFramework>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\TigrSettings.Dynamic\TigrSettings.Dynamic.csproj" />
-	  <ProjectReference Include="..\TigrSettings.Providers.ConfigurationManager\TigrSettings.Providers.ConfigurationManager.csproj" />
-	  <ProjectReference Include="..\TigrSettings.Providers.EnvironmentVariables\TigrSettings.Providers.EnvironmentVariables.csproj" />
-	  <ProjectReference Include="..\TigrSettings\TigrSettings.csproj" />
+	  <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\TigrSettings\TigrSettings.csproj" />
 	</ItemGroup>
 
 </Project>
