--- a/TigrSettings/TigrSettings.csproj
+++ b/TigrSettings/TigrSettings.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<Version>1.1.1</Version>
-		<TargetFrameworks>netstandard2.0;net45;net462</TargetFrameworks>
+		<Version>2.0.0</Version>
+		<TargetFrameworks>net40;netstandard2.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Authors>Sergey Konkin</Authors>
 		<Product>TigrSettings</Product>
@@ -13,6 +13,18 @@
 		<RepositoryUrl>https://github.com/sergeykonkin/TigrSettings</RepositoryUrl>
 		<PackageTags>app.config web.config settings</PackageTags>
 	</PropertyGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)'=='net40'">
+		<Reference Include="System.Configuration" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="ImpromptuInterface" Version="7.0.1" />
+	</ItemGroup>
 
 	<PropertyGroup>
 		<DocumentationFile>bin\$(Configuration)\$(TargetFramework)\TigrSettings.xml</DocumentationFile>
