--- a/TigrSettings/TigrSettings.csproj
+++ b/TigrSettings/TigrSettings.csproj
@@ -3,15 +3,19 @@
 	<PropertyGroup>
 		<Version>2.1.0</Version>
 		<TargetFrameworks>net40;netstandard2.0</TargetFrameworks>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Authors>Sergey Konkin</Authors>
 		<Product>TigrSettings</Product>
-		<Description>Simple yet extensible .NET Standard 2.0 library for mapping settings to strong types.</Description>
+		<Description>Simple yet extensible library for mapping settings to strong types. Check GitHub project page for full documentation.</Description>
 		<Copyright>Copyright (c) 2018 Sergey Konkin</Copyright>
 		<PackageLicenseUrl>https://raw.githubusercontent.com/sergeykonkin/TigrSettings/master/LICENSE</PackageLicenseUrl>
 		<PackageProjectUrl>https://github.com/sergeykonkin/TigrSettings</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/sergeykonkin/TigrSettings</RepositoryUrl>
 		<PackageTags>app.config web.config settings</PackageTags>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)'=='Release'">
+		<DocumentationFile>bin\$(Configuration)\$(TargetFramework)\TigrSettings.xml</DocumentationFile>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)'=='net40'">
@@ -25,9 +29,5 @@
 	<ItemGroup>
 		<PackageReference Include="ImpromptuInterface" Version="7.0.1" />
 	</ItemGroup>
-
-	<PropertyGroup>
-		<DocumentationFile>bin\$(Configuration)\$(TargetFramework)\TigrSettings.xml</DocumentationFile>
-	</PropertyGroup>
 
 </Project>
