--- a/TigrSettings.Examples/TigrSettings.Examples.csproj
+++ b/TigrSettings.Examples/TigrSettings.Examples.csproj
@@ -1,16 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<OutputType>Exe</OutputType>
-		<TargetFramework>net462</TargetFramework>
-	</PropertyGroup>
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net462</TargetFramework>
+  </PropertyGroup>
 
-	<ItemGroup>
-	  <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\TigrSettings\TigrSettings.csproj" />
-	</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TigrSettings\TigrSettings.csproj" />
+  </ItemGroup>
 
 </Project>
