--- a/TigrSettings/TigrSettings.csproj
+++ b/TigrSettings/TigrSettings.csproj
@@ -30,4 +30,10 @@
     <PackageReference Include="ImpromptuInterface" Version="7.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>TigrSettings.Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
