Remove dynamic part

--- a/SettingsMapper/SettingsMapper.csproj
+++ b/SettingsMapper/SettingsMapper.csproj
@@ -1,11 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>3.3.1</Version>
     <TargetFrameworks>net40;netstandard2.0</TargetFrameworks>
     <Authors>Sergey Konkin</Authors>
     <Product>SettingsMapper</Product>
-    <Description>Simple yet extensible library for mapping settings to strong types. Check GitHub project page for full documentation.</Description>
+    <Description>Simple yet extensible library for mapping settings to strong types.</Description>
     <Copyright>Copyright (c) 2018 Sergey Konkin</Copyright>
     <PackageLicenseUrl>https://raw.githubusercontent.com/sergeykonkin/SettingsMapper/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/sergeykonkin/SettingsMapper</PackageProjectUrl>
@@ -24,10 +23,6 @@
 
   <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="ImpromptuInterface" Version="7.0.1" />
   </ItemGroup>
 
   <ItemGroup>
